--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,8 @@ OPENAI_API_KEY=sk-proj-YOUR_API_KEY_HERE
 # Optional: Model Configuration
 MODEL_NAME=gpt-3.5-turbo
 TEMPERATURE=0.7
+
+# Supabase Configuration
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_KEY=your_service_role_key_here
+SUPABASE_DB_PASSWORD=your_database_password_here  # Required for LlamaIndex vector store
