--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,9 @@ tiktoken>=0.5.0
 pymupdf>=1.23.0
 pillow>=10.0.0
 pytesseract>=0.3.10
+llama-index>=0.9.0
+llama-index-core>=0.9.0
+llama-index-llms-openai>=0.1.0
+llama-index-embeddings-openai>=0.1.0
+llama-index-vector-stores-supabase>=0.1.0
+llama-index-readers-file>=0.1.0
