--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,8 @@ PyMuPDF==1.23.8
 # Vector database
 chromadb==0.4.22
 
+# LlamaIndex for hierarchical retrieval
+llama-index-vector-stores-chroma
+
 # Optional: for better embeddings
 sentence-transformers==2.3.1
